# DaisyDB

./: README.md
cs591_templatedb-master/: README.md  running_data.data  test_10000_2.data
cs591_templatedb-master/src/templatedb/: db.cpp  db.hpp
cs591_templatedb-master/src/templatedb/daisy7086/: tempory_storage.txt
cs591_templatedb-master/tests/: CMakeLists.txt  basic_test.cpp  running_test.cpp  running_test2.cpp
cs591_templatedb-master/tests/10000/: 10000_leveled_20_80.cpp  10000_leveled_50_50.cpp  10000_leveled_80_20.cpp  10000_swap_20_80.cpp  10000_swap_50_50.cpp  10000_swap_80_20.cpp  10000_tiered_20_80.cpp  10000_tiered_50_50.cpp  10000_tiered_80_20.cpp
cs591_templatedb-master/tests/100000/: 100000_leveled_20_80.cpp  100000_leveled_50_50.cpp  100000_leveled_80_20.cpp  100000_swap_20_80.cpp  100000_swap_50_50.cpp  100000_swap_80_20.cpp  100000_tiered_20_80.cpp  100000_tiered_50_50.cpp  100000_tiered_80_20.cpp
cs591_templatedb-master/tests/50000/: 50000_leveled_20_80.cpp  50000_leveled_50_50.cpp  50000_leveled_80_20.cpp  50000_swap_20_80.cpp  50000_swap_50_50.cpp  50000_swap_80_20.cpp  50000_tiered_20_80.cpp  50000_tiered_50_50.cpp  50000_tiered_80_20.cpp
cs591_templatedb-master/tools/: gen_data.py  running_data2.data
cs591_templatedb-master/tools/here/: test_1000000_5.data  test_100_5.data  test_100_5_1000000.wl
